# pyfbsdi2c

./: LICENSE.md  README.md  pyproject.toml  setup.cfg
src/: fbsdi2c.py
src/fbsdi2c/: __init__.py
