[metadata]
name = pyfbsdi2c-tspspi
version = 0.0.1
author = Thomas Spielauer
author_email = pypipackages01@tspi.at
description = iic (I2C) ioctl wrapper for FreeBSD
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/tspspi/fbsdi2cwrapper
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: BSD License
	Operating System :: POSIX :: BSD :: FreeBSD

[options]
package_dir =
	= src
packages = find:
python_requires = >= 3.6
install_requires =
	pylabdevs-tspspi >= 0.0.16

[options.packages.find]
where = src
